<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#256DC3"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginVertical="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_lastname"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/profile_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_balance"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_span"
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#1E46C5"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:text="@string/search_food"
            android:id="@+id/mainPageButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_launcher_foreground"
            app:backgroundTint="#1C58A0" />

        <Button
            android:text="@string/deliveries_button"
            android:id="@+id/deliveriesButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            app:backgroundTint="#1C58A0"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_launcher_foreground" />

        <Button
            android:text="@string/profile_button"
            android:id="@+id/profileButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="#074081"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_launcher_foreground" />
    </LinearLayout>
</RelativeLayout>