<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_identifierInput"
            android:hint="@string/form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="6dp"
            android:background="@drawable/button_background"
            />
        <!-- Change this to an input drawable, better for view -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_passwordInput"
            android:hint="@string/form_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_buttonLogin"
        android:text="@string/button_login"
        android:minHeight="70dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</RelativeLayout>